--- a/index.html
+++ b/index.html
@@ -204,6 +204,19 @@
                 </a>
                 <div class="link-description">Conheça nossa loja virtual completa</div>
             </div>
+
+            <div class="link-container">                 
+                <a class="link-item" href="tel:+5548991463351" target="_blank">                     
+                    <div class="link-left">                         
+                        <svg fill="#25D366" viewBox="0 0 24 24">
+                            <path d="M6.62 10.79a15.053 15.053 0 006.59 6.59l2.2-2.2a1 1 0 011.11-.21c1.2.48 2.53.74 3.88.74a1 1 0 011 1V20a1 1 0 01-1 1C10.07 21 3 13.93 3 5a1 1 0 011-1h3.5a1 1 0 011 1c0 1.35.26 2.68.74 3.88a1 1 0 01-.21 1.11l-2.2 2.2z"/>
+                        </svg>                         
+                        <span>Telefone</span>                     
+                    </div>                     
+                    <span class="arrow">→</span>                 
+                </a>                 
+                <div class="link-description">Nos contate por ligação</div>             
+            </div>
         </div>
     </main>
 </body>
