--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <html lang="pt-BR">
 <head>
     
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon16.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon32.png">
-    <link rel="shortcut icon" href="favicon32.png" type="image/png">
+    <link rel="icon" type="image/x-icon" href="favicon-32x32.ico">
+    <link rel="shortcut icon" href="favicon-32x32.ico" type="image/x-icon">
     
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
